--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Django==4.0.5
+Django==4.1.5
+Pillow==9.4.0
 django-environ==0.9.0
-Pillow==9.1.1
+psycopg2==2.9.5
+whitenoise==6.2.0
 gunicorn==20.1.0
+python3==3.9.12
